--- a/index.css
+++ b/index.css
@@ -6,34 +6,27 @@ background-image: linear-gradient(315deg, #f8f0e3 0%, #f9f9f9 74%);
 margin: 0;
 }
 
-.full-width{
-  border-style: solid;
-  border-width: 10px;
-  border-color: red;
-}
-
-.slide-dots{
-  margin: 2% 60% 0 0;
-  border-style: ridge;
-}
 
 /* top nav bar*/
 .topnav {
   background-color: #333;
-  overflow: hidden;
-  margin-bottom: 20px;
+  overflow: hide;
   top: 0;
   width: 100%;
   z-index: 100;
+  height: 10vh;
 }
 
 .topnav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 5%;
+  padding: 14px 5% ;
   text-decoration: none;
   font-size: 17px;
+  margin: auto;
+  vertical-align: middle;
+  height: 100%;
 }
 
 .topnav a:hover {
@@ -46,13 +39,19 @@ margin: 0;
   color: white;
 }
 
+#yes{
+  text-align: center;
+}
 /* Slideshow container */
+.slide-dots{
+  background: #f9f9f9;
+  height: 40vh;
+}
 .slideshow-container {
   max-width: 50%;
   min-width: 50%;
   position: relative;
-  margin: 2% 2% 2% 2%;
-  padding-bottom: 6%;
+  margin: auto;
 }
 
 /* Hide the images by default */
@@ -113,8 +112,8 @@ margin: 0;
 
 /* The dots/bullets/indicators */
 .the-circles {
-  margin: 2% 2% 2% 0;
-  padding: 2% 2% 2% 0;
+  margin: auto;
+  text-align: center;
 }
 
 .dot {
@@ -126,6 +125,7 @@ margin: 0;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  text-align: center;
 }
 
 .active, .dot:hover {
@@ -153,16 +153,14 @@ margin: 0;
 /* Dropdown*/
 
 .drop-down-menu{
-  max-width: 40%;
-  margin: 0 0 0 60%;
-  padding-bottom: ;
-  border-style: outset;
-  border-color: indigo;
+  max-width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 2px;
 }
 
 .dropbtn {
   background-color: #ffc0cb;
-  border-radius: 1em;
   color: black;
   margin-bottom: 1em;
   font-size: 18px;
@@ -204,24 +202,61 @@ background-image: linear-gradient(315deg, #007ea7 0%, #80ced7 74%);
   display: block;  
 }  
 
-
+/*contact page*/
+.up{
+  text-align: center;
+  height: 30vh; 
+  background: #f9f9f9;
+  margin-bottom: 0;
+}
+.survey{
+  background: #f8f0e3;
+  text-align: center;
+  height: 60vh;
+}
+#span{
+  margin-top: -10px;
+}
+.check-boxes{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  white-space: nowrap;
+  color: #581313;
+}
+#submit{
+  background-color: rgb(245, 122, 122) ;
+  text-align: center;
+}
+#submit:hover{
+  background-color: rgb(240, 29, 29);
+}
+.yo{
+  text-align: center;
+}
 /* about page*/
 .story{
   padding-bottom: 10%;
   padding-top: 5%;
   background: #f9f9f9;
   margin-bottom: 0;
+  text-align: justify;
+  padding-right: 15%;
+  padding-left: 15%;
   text-align: center;
+  height: 30vh;
 }
 
 .explain{
 background: #f8f0e3;
 margin-top: 0;
+margin: auto;
 padding-bottom: 20%;
 padding-top: 5%;
-text-align: center;
+text-align: justify;
 padding-right: 15%;
 padding-left: 15%;
+height: 60vh;
 }
 
 .board{
@@ -233,23 +268,66 @@ padding-left: 15%;
 .all{
   display: grid;
   gap: 0;
-
+  width: 100%;
+  height: 90vh;
 }
 .top-right{
-  border-style: solid;
-  border-color: red;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  background: url('laptop-girl.jpg');
+  background-size: cover;
+  text-align: center; 
+}
+.top-right:hover{
+  filter: sepia(100%) saturate(100%) brightness(100%) hue-rotate(330deg);
 }
 .top-left{
-  border-style: solid;
-  border-color: blue;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  background: url('sticky-notes.jpg');
+  background-size: cover;
+  text-align: center;
+}
+.top-left:hover{
+  filter: sepia(100%) saturate(200%) brightness(70%) hue-rotate(330deg);
 }
 .bottom-right{
-  border-style: solid;
-  border-color: yellow;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  background: url('conference-room.jpg');
+  background-size: cover;
+  text-align: center;
+}
+.bottom-right:hover{
+  filter: sepia(100%) saturate(200%) brightness(70%) hue-rotate(330deg);
 }
 .bottom-left{
-  border-style: solid;
-  border-color: green;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  background: url('library.webp');
+  background-size: cover;
+  text-align: center;
+}
+.bottom-left:hover{
+  filter: sepia(100%) saturate(200%) brightness(70%) hue-rotate(330deg);
 }
 
-
+.box{
+  padding: 20px;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 1px ;
+  z-index: 2;
+  position: relative;
+  top: 25%;
+}
