--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ margin: 0;
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 5% ;
+  padding: 14px 5%;
   text-decoration: none;
   font-size: 17px;
   margin: auto;
@@ -41,11 +41,15 @@ margin: 0;
 
 #yes{
   text-align: center;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 /* Slideshow container */
 .slide-dots{
   background: #f9f9f9;
-  height: 40vh;
+  /* height: 40vh; */
+  margin-bottom: 20px;
 }
 .slideshow-container {
   max-width: 50%;
@@ -57,6 +61,7 @@ margin: 0;
 /* Hide the images by default */
 .mySlides {
   display: none;
+
 }
 
 .photos{
@@ -153,10 +158,13 @@ margin: 0;
 /* Dropdown*/
 
 .drop-down-menu{
-  max-width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 2px;
+  height: 50vh;
+  margin-top: 20px; 
+  padding-top: 20px;
+  background-color: #f8f0e3;
 }
 
 .dropbtn {
@@ -166,7 +174,10 @@ margin: 0;
   font-size: 18px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 40%;
+  border-style: solid;
+  border-radius: 10%;
+  border-color: #ffc0cb;
   text-align: left;
 }
   
